--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alloy-reth-provider"
-version = "1.4.8"
+version = "1.5.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.85"
@@ -39,28 +39,28 @@ op-alloy-network = { version = "0.18.6", default-features = false, optional = tr
 op-alloy-rpc-types = { version = "0.18.6", default-features = false, optional = true }
 
 # reth
-reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false, features = ["serde"] }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false, features = [
+reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = ["serde"] }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = [
   "serde-bincode-compat",
 ] }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
 
 # ethereum
-reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false, features = [
+reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = [
   "reth-codec",
 ] }
-reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false }
+reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
 
 # optimism
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false, optional = true }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906", default-features = false, features = [
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, optional = true }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = [
   "alloy-compat",
   "reth-codec",
   "serde",
@@ -76,9 +76,9 @@ alloy-node-bindings = "1.0.13"
 alloy-provider = { version = "1.0.13", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906" }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "2e79906" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
 ruint = "1.15.0"
 test-with = { version = "0.15.1", default-features = false }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
